--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,98 @@
-.App {
-  text-align: center;
+*{
+  margin:0;
+  padding:0;
+  box-sizing: border-box;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body{
   display: flex;
-  flex-direction: column;
   align-items: center;
+  justify-content: center;    
+  /* background-image: linear-gradient(purple,rgb(238, 48, 238)); */
+  background-color: #3aaccb;
+  min-height: 100vh;
+  width: 100%;
+}
+
+.container {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  min-height: 300px;
+  min-width: 300px;
+  background-color: white;
+  border-radius: 15px;
+  /* box-shadow: 2px 2px 10px 1px rgb(102, 3, 102); */
+  box-shadow: 2px 2px 10px 1px #333;  
+  overflow: hidden;
+  padding: 10px;
+  position: relative;
+  margin:0px 10px;
+}
+.heading-txt{
+  color:white;
+  /* color:#276272; */
+  font-size: 30px;
+  font-weight: bold;
+  margin: 10px;
+  text-align: center;  
+  text-transform: uppercase;
+}
+.question{
+  margin:18px;
+  box-shadow: 0px 0px 10px 1px #a2a3a3;
+  border-radius: 5px;
+  padding:5px;
+  font-size: large;
+  font-weight: 600;
+  font-family: 'Times New Roman', Times, serif;
+  min-width: 100%;
+  min-height: 90px;
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  /* align-items: center; */
+}
+#question-number{
+  margin-right: 5px;
+  margin-top: 4px;
 }
 
-.App-link {
-  color: #61dafb;
+#next-button{
+  padding:10px;
+  border:none;
+  background-color: purple;
+  background-color: #276272;
+  color:white;
+  border-radius: 5px;
+  box-shadow: 3px 3px 2px 1px rgb(127, 109, 109);
+  font-size: larger;
+  font-weight: bold;
+  font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  transition: 0.2s;
+  width:100px;
+  /* position: absolute; */
+  bottom: 15px;
+  margin-left: 10px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#next-button:active{
+  box-shadow:none;    
+}
+#prev-button{
+  padding:10px;
+  border:none;
+  background-color: purple;
+  background-color: #276272;
+  color:white;
+  border-radius: 5px;
+  box-shadow: 3px 3px 2px 1px rgb(127, 109, 109);
+  font-size: larger;
+  font-weight: bold;
+  font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  transition: 0.2s;
+  width:100px;
+  
+  /* position: absolute; */
+  bottom: 15px;
+}
+#prev-button:active{
+  box-shadow:none;    
 }
